// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper :props :animation fade 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-fade"
    >
      <div
        class="t-swiper__container"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :autoplay 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :defaultCurrent 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-200%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :direction 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(0, -0%, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :duration 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :height 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :interval 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :loop 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :navigation 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--outside t-swiper--large"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :theme 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`Swiper :props :type 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-card"
    >
      <div
        class="t-swiper__container"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    >
      
      
    </ul>
    <!---->
  </div>
</div>
`;
